<resources>
    <string name="app_name">Capstone</string>
    <string name="titlePage">AlifLam</string>
    <string name="name">Nama Lengkap</string>
    <string name="username">Nama Pengguna</string>
    <string name="Password">Kata Kunci</string>
    <string name="confirm_password">Konfirmasi Kata Kunci</string>
    <string name="have_account">Sudah memiliki akun?</string>
    <string name="join">Masuk</string>
    <string name="register">Daftar</string>
    <string name="dont_have_account">Belum memiliki akun?</string>
    <string name="here_regist">Daftar Disini</string>
    <string name="splashScreen">SplashScreen</string>
    <string name="home">Home</string>
    <string name="activity">Activity</string>
    <string name="profile">Profile</string>
    <string name="profile_image">Profile Image</string>
    <string name="profile_btn">Edit Profile Photo</string>
    <string name="about_btn">Tentang Aplikasi</string>
    <string name="logout_btn">Keluar</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="reset">Reset</string>
    <string name="arabic_name">Huruf Arab</string>
    <string name="image_arabic">Gambar huruf arab</string>
    <string name="submit">Check</string>

    <!--  Home Page-->
    <string name="welcome_text">Hello, %1$s!</string>
    <string name="username_profile">%1$s!</string>
    <string name="level_text">Level 3</string>
    <string name="beginner_text">Beginner</string>
    <string name="alif">Alif</string>
    <string name="lam_alif">Lam Alif</string>
    <string name="ba">Ba</string>
    <string name="ta">Ta</string>
    <string name="tsa">Tsa</string>
    <string name="jim">Jim</string>
    <string name="start_text">Let\'s Start begin your\nArabic Journey</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>