<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.page.CanvasActivity">

    <LinearLayout
        android:id="@+id/canvas"
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/arabicImg"
        app:layout_constraintVertical_bias="0.317" />

    <SeekBar
        android:id="@+id/thickness_paint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:max="50"
        android:progress="6"
        app:layout_constraintTop_toBottomOf="@id/arabicImg"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/arabicName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/arabic_name"
        app:layout_constraintTop_toBottomOf="@id/resetBtn"
        android:textSize="24sp"
        android:fontFamily="@font/nunito_bold"
        android:textColor="@color/black"/>

    <ImageView
        android:id="@+id/arabicImg"
        android:layout_width="130dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/item_image27"
        app:layout_constraintEnd_toStartOf="@id/arabicName"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/image_arabic"/>

    <ImageButton
        android:id="@+id/undoBtn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/redoBtn"
        android:background="@drawable/undo"
        android:contentDescription="@string/undo"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"/>

    <ImageButton
        android:id="@+id/redoBtn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/resetBtn"
        android:background="@drawable/redo"
        android:contentDescription="@string/redo"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"/>
    <ImageButton
        android:id="@+id/resetBtn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/reset"
        android:contentDescription="@string/reset"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"/>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/color_btn_profile"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/submit"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/canvas"
        />


</androidx.constraintlayout.widget.ConstraintLayout>