<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".ui.page.fragment.ProfilFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="100dp">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/profile_image" />
        <TextView
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            tools:text="@string/username_profile"
            android:textSize="24sp"
            android:fontFamily="@font/nunito_bold"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/profile_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/profile_image"/>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/profile_image"
            app:layout_constraintStart_toStartOf="@id/username"
            app:layout_constraintTop_toBottomOf="@id/username"
            >
            <LinearLayout
                android:id="@+id/level_text_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/container_background"
                app:layout_constraintHorizontal_bias="0.0"
                android:orientation="horizontal"
                android:padding="4dp">
                <TextView
                    android:id="@+id/level_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="2dp"
                    android:paddingEnd="2dp"
                    android:text="@string/level_text"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/beginner_text_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/container_background2"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@id/level_text_container"
                android:padding="4dp">

                <TextView
                    android:id="@+id/beginner_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="2dp"
                    android:paddingEnd="2dp"
                    android:text="@string/beginner_text"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="32dp">

        <Button
            android:id="@+id/edtProfileBtn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/color_btn_profile"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/profile_btn"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/aboutBtn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/color_btn_profile"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/about_btn"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/edtProfileBtn" />

        <Button
            android:id="@+id/logoutBtn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/color_btn_profile"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/logout_btn"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/aboutBtn" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>