<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.page.fragment.HistoryFragment"
    >

    <!-- Header Layout -->
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/header_background_rounded"
        android:paddingLeft="30dp"
        android:paddingTop="30dp"
        android:paddingRight="30dp">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_profile"
            android:contentDescription="@string/profile_image" />

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_toEndOf="@id/profile_image"
            android:text="@string/welcome_text"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- LinearLayout for Level 3 and Beginner text views -->
        <LinearLayout
            android:id="@+id/level_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcome_text"
            android:layout_marginBottom="4dp"
            android:layout_toEndOf="@id/profile_image"
            android:orientation="horizontal">

            <!-- Container for Level 3 text -->
            <LinearLayout
                android:id="@+id/level_text_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/container_background"
                android:padding="4dp">

                <TextView
                    android:id="@+id/level_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="2dp"
                    android:paddingEnd="2dp"
                    android:text="@string/level_text"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <!-- Container for Beginner text -->
            <LinearLayout
                android:id="@+id/beginner_text_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/container_background2"
                android:padding="4dp">

                <TextView
                    android:id="@+id/beginner_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="2dp"
                    android:paddingEnd="2dp"
                    android:text="@string/beginner_text"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/start_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/level_container"
            android:layout_marginTop="16dp"
            android:text="@string/start_text"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <!-- Content Layout -->
    <RelativeLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_margin="16dp"
        android:background="@drawable/container_history_item">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:src="@drawable/item_image2" />

        <TextView
            android:id="@+id/item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/item_image"
            android:layout_marginTop="16dp"
            android:text="Lam Alif"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/continue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            android:backgroundTint="@color/button_background"
            android:text="Lanjutkan"
            android:textColor="@color/white" />
    </RelativeLayout>

</RelativeLayout>
